# fastobo

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  update-releases.yml
benches/: ms.rs
ci/: build-wheels.sh  codecov.yml  requirements.txt
ci/travis/: deploy.sh  install.sh  script.sh  setup.sh
ci/travis/manylinux/: _after_success.sh  _script.sh  after_success.sh  before_install.sh  install.sh  script.sh
ci/travis/osx/: after_success.sh  before_cache.sh  install.sh  script.sh
ci/travis/rust/: after_script.sh  after_success.sh  install.sh  script.sh
derive/: Cargo.toml
derive/src/: from_str.rs  lib.rs  obo_clause.rs  utils.rs
docs/: .gitignore  about.rst  conf.py  index.rst  install.rst  requirements.txt
docs/api/: header.rst  id.rst  index.rst  term.rst
examples/: librarian.rs
fastobo/: CHANGELOG.md  COPYING  Cargo.toml  README.md  borrow.rs  lib.rs
fastobo-owl/: Cargo.toml
fastobo-owl/src/: constants.rs  doc.rs  id.rs
fastobo-owl/tests/: into_owl.rs
fastobo-owl/tests/data/into_owl/: header.input.obo
fastobo-py/: .gitignore  Cargo.toml  MANIFEST.in  README.md  README.rst  fastobo  fastobo-syntax  setup.cfg  setup.py
fastobo-py-derive/: Cargo.toml
fastobo-py-derive/src/: lib.rs
fastobo-py/derive/: Cargo.toml  lib.rs
fastobo-py/derive/src/: lib.rs
fastobo-py/fastobo/: Cargo.toml  _macros.rs  id.rs  lib.rs
fastobo-py/fastobo-py/: _utils.rs  id.rs  lib.rs  pv.rs  pyfile.rs  utils.rs
fastobo-py/fastobo-py/header/: clause.rs  frame.rs
fastobo-py/fastobo-py/py/: id.rs  mod.rs
fastobo-py/fastobo-py/py/header/: clause.rs
fastobo-py/fastobo/header/: clause.rs  frame.rs  mod.rs
fastobo-py/src/: error.rs  lib.rs  pyfile.rs  utils.rs
fastobo-py/src/py/: doc.rs  entity.rs  id.rs  mod.rs  pv.rs  syn.rs  xref.rs
fastobo-py/src/py/header/: clause.rs  frame.rs  mod.rs
fastobo-py/src/py/term/: clause.rs  frame.rs  mod.rs
fastobo-py/src/py/typedef/: clause.rs  frame.rs  mod.rs
fastobo-py/tests/: test_doctests.py  test_header.py  test_pv.py
fastobo-syntax/: CHANGELOG.md  Cargo.toml  README.md
fastobo-syntax/src/: grammar.pest  lib.rs
fastobo-syntax/tests/: parser.rs
fastobo/ast/: date.rs  line.rs  misc.rs  mod.rs  qualifier.rs  strings.rs  synonym.rs  xref.rs
fastobo/ast/header/: clause.rs  frame.rs  import.rs
fastobo/ast/id/: local.rs  mod.rs  prefix.rs  prefixed.rs  subclasses.rs  unprefixed.rs
fastobo/ast/instance/: clause.rs  frame.rs
fastobo/ast/strings/: quoted.rs  unquoted.rs
fastobo/ast/term/: clause.rs  frame.rs  mod.rs
fastobo/ast/typedef/: clause.rs  frame.rs
fastobo/parser/: mod.rs
fastobo/src/: error.rs  ext.rs  lib.rs  share.rs  visit.rs
fastobo/src/ast/: date.rs  doc.rs  entity.rs  line.rs  misc.rs  mod.rs  pv.rs  qualifier.rs  synonym.rs  xref.rs
fastobo/src/ast/header/: clause.rs  frame.rs  import.rs  mod.rs
fastobo/src/ast/id/: ident.rs  local.rs  mod.rs  prefix.rs  prefixed.rs  subclasses.rs  unprefixed.rs
fastobo/src/ast/instance/: frame.rs
fastobo/src/ast/line/: comment.rs  line.rs
fastobo/src/ast/strings/: quoted.rs  unquoted.rs
fastobo/src/ast/term/: clause.rs  frame.rs
fastobo/src/ast/typedef/: clause.rs  frame.rs
fastobo/src/ext/: mod.rs  treat_xrefs.rs
fastobo/src/parser/: from_pair.rs  macros.rs  mod.rs
fastobo/tests/: canonicalize.rs  foundry.rs  roundtrip.rs
fastobo/tests/data/canonicalize/: header.input.obo
fastobo/tests/data/roundtrip/: msterm.obo
fastobo2owl/: Cargo.toml
fastobo2owl/src/: constants.rs  doc.rs  header.rs  id.rs  lib.rs  term.rs
fastobo2owl/tests/: convert.rs  into_owl.rs
fastobo2owl/tests/data/into_owl/: header.output.owl
fastobo2owl/tests/data/to_owl/: 01.input.obo  02.input.obo  02.output.owl  header.input.obo  header.output.owl  is_a.input.obo  is_a.output.owl  name.output.owl
obofoundry/: Cargo.toml
obofoundry/src/: lib.rs
src/: error.rs  errors.rs  lib.rs  share.rs  syntax.rs  visit.rs
src/ast/: date.rs  definition.rs  doc.rs  entity.rs  frame.rs  line.rs  macros.rs  misc.rs  mod.rs  pv.rs  qualifier.rs  strings.rs  synonym.rs  xref.rs
src/ast/datetime/: iso_date.rs  iso_datetime.rs  iso_time.rs  iso_timezone.rs  mod.rs  naive_datetime.rs
src/ast/entity/: creation_date.rs  definition.rs  frame.rs  mod.rs
src/ast/header/: clause.rs  frame.rs  import.rs
src/ast/id/: ident.rs  local.rs  mod.rs  prefix.rs  prefixed.rs  subclasses.rs  unprefixed.rs  url.rs
src/ast/instance/: clause.rs  frame.rs  mod.rs
src/ast/line/: comment.rs  line.rs  mod.rs
src/ast/strings/: mod.rs  quoted.rs  unquoted.rs
src/ast/term/: clause.rs  frame.rs
src/ast/typedef/: clause.rs  frame.rs  mod.rs
src/ext/: mod.rs  treat_xrefs.rs
src/obo/: mod.rs
src/obo/ast/: _macros.rs  dbxref.rs  mod.rs  property.rs  qualifier.rs  scope.rs
src/obo/ast/header/: clause.rs  mod.rs
src/obo/ast/id/: _macros.rs  class.rs  instance.rs  mod.rs  person.rs  relation.rs
src/obo/ast/instance/: mod.rs
src/obo/ast/term/: mod.rs
src/obo/ast/typedef/: mod.rs
src/obo/parser/: _macros.rs  chars.rs  id.rs  mod.rs  scope.rs  spacing.rs  values.rs
src/obo/parser/header/: _macros.rs  clauses.rs  mod.rs
src/obo14/: mod.rs
src/obo14/ast/: date.rs  line.rs  misc.rs  mod.rs  qualifier.rs  strings.rs  synonym.rs  xref.rs
src/obo14/ast/header/: clause.rs  (+3 more)
src/obo14/parser/: grammar.pest  mod.rs
src/parser/: buffer.rs  consumer.rs  from_pair.rs  from_slice.rs  grammar.pest  macros.rs  mod.rs  quickfind.rs  sequential.rs  threaded.rs
src/parser/threaded/: consumer.rs  mod.rs
src/semantics/: cardinality.rs  mod.rs  treat_xrefs.rs
tests/: canonicalize.rs  foundry.rs  lib.rs  roundtrip.rs  test_doctests.py  test_header.py  test_id.py  transforms.rs
tests/data/: ms.obo  pato.obo  plana.obo  plant-ontology.obo  psi-ms.obo  ro.obo
tests/data/canonicalize/: header.output.obo
tests/data/roundtrip/: creation_dates.obo  importlist.obo  mslite.obo  rhea.obo
tests/roundtrip/: mod.rs  obo.rs
(+14 files in other folders)
