[package]
name = "fastobo"
version = "0.8.3"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Faultless AST for Open Biomedical Ontologies."
repository = "https://github.com/fastobo/fastobo"
homepage = "https://github.com/fastobo/fastobo"
readme = "README.md"
keywords = ["obo", "ontology", "syntax", "ast", "parser"]
categories = ["science", "parser-implementations"]

[lib]
name = "fastobo"
path = "src/lib.rs"

[workspace]
members = ["derive"]

[badges.travis-ci]
repository = "fastobo/fastobo"
[badges.codecov]
repository = "fastobo/fastobo"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo"
[badges.maintenance]
status     = "actively-developed"

[package.metadata.docs.rs]
features = [ "_doc" ]

[dependencies]
err-derive = "0.2.0"
pest = "=2.1.2"
opaque_typedef = "0.0.5"
opaque_typedef_macros = "0.0.5"
ordered-float = "1.0.2"
url = "2.1.0"
fastobo-syntax = "0.3.8"
fastobo-derive-internal = { version = "0.8.3", path = "derive" }
# feature = "memchr"
memchr = { version = "2.2.1", optional = true }
# feature = "threading"
num_cpus = { version = "1.12.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
crossbeam-channel = { version = "0.4", optional = true }

[features]
default = ["memchr", "threading"]
threading = ["crossbeam-channel", "lazy_static", "num_cpus"]
_doc = ["threading"]

[dev-dependencies]
lazy_static = "1.3.0"
obofoundry = "0.4.0"
pretty_assertions = "0.6.1"
serde_yaml = "0.8.8"
textwrap-macros = "0.2.0"
ureq = "0.11.0"
isbn = "0.2.0"
