[package]
name = "fastobo"
version = "0.10.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Faultless AST for Open Biomedical Ontologies."
repository = "https://github.com/fastobo/fastobo"
homepage = "https://github.com/fastobo/fastobo"
readme = "README.md"
keywords = ["obo", "ontology", "syntax", "ast", "parser"]
categories = ["science", "parser-implementations"]

[lib]
name = "fastobo"
path = "src/lib.rs"

[workspace]
members = ["derive"]

[badges.travis-ci]
repository = "fastobo/fastobo"
[badges.codecov]
repository = "fastobo/fastobo"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo"
[badges.maintenance]
status     = "actively-developed"

[package.metadata.docs.rs]
features = [ "_doc" ]

[dependencies]
blanket = "0.1.2"
err-derive = "0.2.0"
fastobo-syntax = "0.6.1"
fastobo-derive-internal = { version = "0.10.0", path = "derive" }
ordered-float = "2.0.0"
pest = "2.1.3"
url = "2.1.0"
# feature = "memchr"
memchr = { version = "2.2.1", optional = true }
# feature = "threading"
num_cpus = { version = "1.12.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
crossbeam-channel = { version = "0.4", optional = true }
# feature = "smartstring"
smartstring = { version = "0.2.3", optional = true }

[features]
default = ["memchr", "threading", "smartstring"]
threading = ["crossbeam-channel", "lazy_static", "num_cpus"]
_doc = ["threading"]

[dev-dependencies]
lazy_static = "1.3.0"
obofoundry = "0.6.0"
pretty_assertions = "0.6.1"
serde_yaml = "0.8.8"
textwrap-macros = "0.2.0"
ureq = "1.0.0"
isbn = "0.2.0"
