[metadata]
name = fastobo
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/fastobo
description = Faultless AST for Open Biomedical Ontologies.
long-description = file: fastobo-py/README.rst
long_description_content_type = text/markdown
license = MIT
keywords = ontologies, ontology, obo, obofoundry, parser, syntax, ast
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Rust
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
test_suite = tests
setup_requires =
    setuptools
    setuptools-rust

[build_rust]
release = true
