[metadata]
name = fastobo
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/fastobo
description = Faultless AST for Open Biomedical Ontologies.
long-description = file: fastobo-py/README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = ontologies, ontology, obo, obofoundry, parser, syntax, ast
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Rust
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Reports = https://github.com/althonos/fastobo/issues
    Changelog = https://fastobo.readthedocs.io/en/latest/changes.html
    Documentation = https://fastobo.readthedocs.io/en/latest/

[options]
zip_safe = false
test_suite = tests
python_requires = >= 3.5.*
setup_requires =
    setuptools
    setuptools-rust
tests_require =
    requests

[bdist_wheel]
universal = false

[check]
metadata = true
restructuredtext = false
strict = true

[build_rust]
release = true
