[package]
name = "fastobo-derive-internal"
version = "0.15.1"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Internal derive macros for the `fastobo` crate."
repository = "https://github.com/fastobo/fastobo"
homepage = "https://github.com/fastobo/fastobo"
workspace = ".."
keywords = ["obo", "ontology", "proc-macro", "derive"]
categories = ["science", "parser-implementations"]

[lib]
proc-macro = true

[badges.travis-ci]
repository = "fastobo/fastobo"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
darling = "0.14.2"
syn = "2.0"
heck = "0.4.0"
quote = "1.0"
