[package]
name = "fastobo-owl"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
edition = "2018"
workspace = ".."

[dependencies]
fastobo = { path = "../fastobo" }
horned-owl = { git = "https://github.com/althonos/horned-owl"}
failure = "0.1.5"
curie = "0.0.8"
either = "1.5.2"

[dev-dependencies]
curie = "0.0.8"
lazy_static = "1.3.0"
pretty_assertions = "0.6.1"

[[bin]]
name = "fastobo2owl"
path = "bin/fastobo2owl.rs"
