[workspace]
members = ["fastobo", "derive", "fastobo-syntax"]

[package]
name = "fastobo-py"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "fastobo_py"
path = "fastobo-py/lib.rs"

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3" }
libc = "*"
url = "*"

opaque_typedef = "*"
opaque_typedef_macros = "*"

fastobo = { path = "fastobo" }
fastobo-py-derive = { path = "derive" }


[profile.release]
lto = true
