[metadata]
name = fastobo
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/fastobo

[options]
zip_safe = false
test_suite = tests

[tomlgen_rust]
create-workspace = true

[build_rust]
release = true

[aliases]
build_rust = tomlgen_rust build_rust
build_ext = tomlgen_rust build_ext
bdist_wheel = tomlgen_rust bdist_wheel
bdist_egg = tomlgen_rust bdist_egg
