[package]
name = "fastobo-syntax"
version = "0.2.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/althonos/fastobo"
documentation = "https://github.com/althonos/fastobo/tree/master/fastobo-syntax"
homepage = "https://github.com/althonos/fastobo"
description = "PEG Syntax and pest parser for the OBO flat file format 1.4"
edition = "2018"
keywords = ["obo", "ontology", "obofoundry", "syntax", "parser"]
categories = ["science", "parser-implementations"]
workspace = ".."

[badges.travis-ci]
repository = "althonos/fastobo"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/fastobo"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
