[package]
name        = "obofoundry"
version     = "0.1.0"
authors     = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
edition     = "2018"
license     = "MIT"
description = "Structures to deserialize OBO Foundry listings into."
readme      = "README.md"
keywords    = ["obo", "ontology", "obofoundry", "foundry", "serde"]
categories  = []

[lib]
name = "obofoundry"
path = "src/lib.rs"

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dev-dependencies]
serde_yaml = "0.8"
serde_json = "1.0"
reqwest    = "0.9"
