[package]
name = "fastobo-py"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "fastobo"
path = "lib.rs"

[dependencies]
pyo3 = { path = "/home/althonos/Code/pyo3/pyo3" }
#pyo3 = { git = "https://github.com/PyO3/pyo3" }
fastobo = { path = "../.." }
libc = "*"
